kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-telemetry
  namespace: github
spec:
  selector:
    matchLabels:
      app: github-telemetry
  replicas: 5
  template:
    metadata:
      labels:
        app: github-telemetry
    spec:
      containers:
        - name: github-telemetry
          image: ghcr.io/lindluni/opensearch-webhooks:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr
