kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: github-telemetry-service
  namespace: github
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: github-telemetry
