kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-telemetry-ingress
  namespace: github
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - <domain URL>
      secretName: github-telemetry-secret
  rules:
    - host: <domain URL>
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: github-telemetry-service
                port:
                  number: 3000
